--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
     "server": "nodemon ./bin/www"
   },
   "dependencies": {
+    "@prisma/client": "^5.9.1",
     "concurrently": "^8.2.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
@@ -18,6 +19,7 @@
     "morgan": "~1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "prisma": "^5.9.1"
   }
 }
