--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,3 +1,17 @@
+# Logs
+logs
+*.log
+npm-debug.log*
+
+# dependencies
 node_modules
-# Keep environment variables out of version control
+
+# production
+build
+dist
+
+# misc
+.DS_Store
 .env
+*.local
+.idea
