--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
-        "@emotion/react": "^11.11.3",
-        "@emotion/styled": "^11.11.0",
-        "@mui/material": "^5.15.9",
         "@reduxjs/toolkit": "^2.1.0",
+        "antd": "^5.14.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.0",
