--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@ant-design/icons": "^5.3.0",
         "@reduxjs/toolkit": "^2.1.0",
         "antd": "^5.14.1",
         "react": "^18.2.0",
